--- a/ex2-techup-chatroom/index.html
+++ b/ex2-techup-chatroom/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/bf7220ad33.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap"
+      rel="stylesheet"
+    />
+    <title>Positioned Layout Exercise 2 TechUp Chatroom</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <script src="https://kit.fontawesome.com/bf7220ad33.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
-  <title>Positioned Layout Exercise 2 TechUp Chatroom</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <!-- Start coding here -->
+    <header class="chatroom-title">Techup Chatroom</header>
+    <main class="chatroom">
+      <div class="chatroom-right">
+        <div class="bubble-right">สวัสดีจ้า</div>
+        <div class="bubble-right bubble-right-2">
+          Coding สนุกจังเลย
+          <a href="" class="bubble-close">&#x2715;</a>
+        </div>
+        <div class="bubble-right">&#128535;&#128525;</div>
+      </div>
+      <div class="chatroom-left">
+        <div class="bubble-left">&#128525;</div>
+        <div class="bubble-left">&#128535;</div>
+      </div>
+    </main>
+  </body>
 </html>
