--- a/ex1-bubble-tea-shop/index.html
+++ b/ex1-bubble-tea-shop/index.html
@@ -10,13 +10,22 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
-  <div>
-    <img src="./preview-img.jpeg" />
-    <div>Kully-Qoo Bubble Tea ตลาดปากน้ำ</div>
-    <div>ปากน้ำ</div>
-    <div></div>
+    <div class="container">
+      <div class="pic">
+        <img src="./preview-img.jpeg" />
+      </div>
+      <div class="detail">
+        <p>Kully-Qoo Bubble Tea ตลาดปากน้ำ</p>
+      </div>
+      <div class="placename">
+        <p>ปากน้ำ</p>
+      </div>
+      <div class="shadow"></div>
+      
+    </div>
+    
   </div>
+  
 </body>
 
 </html>
