feat: add bubble tail ex-2

--- a/ex2-techup-chatroom/index.html
+++ b/ex2-techup-chatroom/index.html
@@ -23,7 +23,9 @@
     <header class="chatroom-title">Techup Chatroom</header>
     <main class="chatroom">
       <div class="chatroom-right">
-        <div class="bubble-right">สวัสดีจ้า</div>
+        <div class="bubble-right bubble-right-1">สวัสดีจ้า</div>
+        <div class="bubble-tail-1"></div>
+        <div class="bubble-tail-2"></div>
         <div class="bubble-right bubble-right-2">
           Coding สนุกจังเลย
           <a href="" class="bubble-close">&#x2715;</a>
