Feat: Add chat page

--- a/ex2-techup-chatroom/index.html
+++ b/ex2-techup-chatroom/index.html
@@ -14,7 +14,24 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <nav>
+    <div class="Navbar">
+      <p>Techup Chatroom</p>
+    </div>
+  </nav>
+  <main class="chat">
+    <div class="right-1">
+      <p>สวัสดีจร้า</p>
+    </div>
+    <div class="right-2">
+      <p>codding สนุกจังเลย</p>
+    </div>
+    <div class="right-3"><p>🥳🤩</p></div>
+    <div class="left-1"><p>😍</p></div>
+    <div class="left-2"><p>🥳</p></div>
+    <i class="fa-solid fa-circle-xmark"></i>
+    <i class="fa-solid fa-moon"></i>
+  </main>
 </body>
 
 </html>
